--- a/jersey-demo/build.gradle
+++ b/jersey-demo/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     providedCompile 'javax.ws.rs:javax.ws.rs-api:2.0'
     compile 'org.glassfish.jersey.core:jersey-server:2.4'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.4'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.4'
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.4'
 }
 
