--- a/jersey-demo/build.gradle
+++ b/jersey-demo/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'groovy'
 apply plugin: 'war'
 apply plugin: 'jetty'
 
@@ -13,6 +14,8 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-server:2.4'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.4'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.4'
+    compile 'org.codehaus.groovy:groovy-all:2.1.3'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.4'
 }
 
