--- a/spark-demo/build.gradle
+++ b/spark-demo/build.gradle
@@ -7,11 +7,12 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-  compile 'com.sparkjava:spark-core:2.0.0'
-  providedCompile 'javax.servlet:servlet-api:2.5'
-  runtime 'javax.servlet:jstl:1.1.2'
+    providedCompile 'javax.servlet:servlet-api:2.5'
+    compile 'com.sparkjava:spark-core:2.0.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.4'
+    runtime 'javax.servlet:jstl:1.1.2'
 }
