--- a/jersey-demo/src/main/webapp/WEB-INF/web.xml
+++ b/jersey-demo/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.example.jersey.App</param-value>
+            <param-value>com.example.jersey.Application</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
